[gd_scene load_steps=16 format=3 uid="uid://i60btftcy6ji"]

[ext_resource type="Script" uid="uid://dbqvta4b25f55" path="res://scripts/hud.gd" id="1_nysna"]
[ext_resource type="Script" uid="uid://cspwhrut3nv8d" path="res://scripts/inventory.gd" id="2_f6qnu"]
[ext_resource type="PackedScene" uid="uid://c7htbu4a30wt2" path="res://scenes/orb_bar.tscn" id="3_k4w17"]
[ext_resource type="Shader" uid="uid://8wg2iwar8qby" path="res://shaders/pantheon_sky_stars.gdshader" id="4_f6qnu"]
[ext_resource type="Script" uid="uid://bqb1l0y2cyjop" path="res://scripts/mini_map_viewport.gd" id="4_twldb"]
[ext_resource type="Script" uid="uid://b3h4lpeh81nkb" path="res://scripts/debug_hud.gd" id="5_8cuoo"]
[ext_resource type="FontFile" uid="uid://me757ermgvb3" path="res://assets/ui/Ithaca-LVB75.ttf" id="5_k4w17"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k4w17"]
shader = ExtResource("4_f6qnu")
shader_parameter/bg_color = Vector4(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_twldb"]
bg_color = Color(0.13, 0.13, 0.13, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8cuoo"]
bg_color = Color(0.13, 0.13, 0.13, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1iba3"]
bg_color = Color(0, 0, 0, 0.360784)

[sub_resource type="Theme" id="Theme_tvl7m"]
Label/font_sizes/font_size = 16
Label/styles/normal = SubResource("StyleBoxFlat_1iba3")

[sub_resource type="Gradient" id="Gradient_twldb"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.272727, 0.681818)
colors = PackedColorArray(0.410854, 3.60981e-06, 0.273125, 1, 0.215492, 2.45166e-07, 4.81308e-08, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8cuoo"]
gradient = SubResource("Gradient_twldb")
width = 356
height = 256
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cf6ij"]
texture = SubResource("GradientTexture2D_8cuoo")

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_nysna")

[node name="Inventory" type="Node" parent="."]
script = ExtResource("2_f6qnu")
slot_count = 21

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OrbHP" parent="HUD" instance=ExtResource("3_k4w17")]
position = Vector2(32, 32)
scale = Vector2(0.2, 0.2)

[node name="OrbMP" parent="HUD" instance=ExtResource("3_k4w17")]
position = Vector2(88, 32)
scale = Vector2(0.2, 0.2)

[node name="QuickSlots" type="HBoxContainer" parent="HUD"]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 125.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="Slot1" type="TextureRect" parent="HUD/QuickSlots"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Slot2" type="TextureRect" parent="HUD/QuickSlots"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Slot3" type="TextureRect" parent="HUD/QuickSlots"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Slot4" type="TextureRect" parent="HUD/QuickSlots"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Slot5" type="TextureRect" parent="HUD/QuickSlots"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Slot6" type="TextureRect" parent="HUD/QuickSlots"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Slot7" type="TextureRect" parent="HUD/QuickSlots"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Slot8" type="TextureRect" parent="HUD/QuickSlots"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Slot9" type="TextureRect" parent="HUD/QuickSlots"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Slot10" type="TextureRect" parent="HUD/QuickSlots"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InventoryPanel" type="Panel" parent="HUD"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Sky" type="ColorRect" parent="HUD/InventoryPanel"]
material = SubResource("ShaderMaterial_k4w17")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.580392, 0.729412, 1)

[node name="InfoTabs" type="TabContainer" parent="HUD/InventoryPanel"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 20.0
offset_right = -60.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_k4w17")
theme_override_font_sizes/font_size = 32
tab_alignment = 1
current_tab = 0

[node name="Задания гильдии" type="Control" parent="HUD/InventoryPanel/InfoTabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="QuestsList" type="ScrollContainer" parent="HUD/InventoryPanel/InfoTabs/Задания гильдии"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_twldb")

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/InventoryPanel/InfoTabs/Задания гильдии/QuestsList"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3

[node name="Снаряжение" type="Control" parent="HUD/InventoryPanel/InfoTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="CenterContainer" type="CenterContainer" parent="HUD/InventoryPanel/InfoTabs/Снаряжение"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryGrid" type="GridContainer" parent="HUD/InventoryPanel/InfoTabs/Снаряжение/CenterContainer"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
columns = 5

[node name="Характеристики" type="VBoxContainer" parent="HUD/InventoryPanel/InfoTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="BlessingsList" type="ItemList" parent="HUD/InventoryPanel/InfoTabs/Характеристики"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8cuoo")

[node name="SubViewportContainer" type="SubViewportContainer" parent="HUD"]
visible = false
clip_children = 2
clip_contents = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -106.0
offset_top = 5.0
offset_right = 918.0
offset_bottom = 517.0
grow_horizontal = 0
scale = Vector2(0.1, 0.1)
stretch = true

[node name="MiniMapViewport" type="SubViewport" parent="HUD/SubViewportContainer" node_paths=PackedStringArray("camera_node")]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(1024, 512)
size_2d_override_stretch = true
render_target_update_mode = 0
script = ExtResource("4_twldb")
camera_node = NodePath("MiniMapCamera")

[node name="MiniMapCamera" type="Camera2D" parent="HUD/SubViewportContainer/MiniMapViewport"]
visible = false
zoom = Vector2(0.3, 0.3)
limit_smoothed = true

[node name="DebugInfo" type="Label" parent="HUD"]
visible = false
custom_minimum_size = Vector2(140, 140)
layout_mode = 1
offset_left = 6.0
offset_top = 64.0
offset_right = 172.0
offset_bottom = 408.0
theme = SubResource("Theme_tvl7m")
script = ExtResource("5_8cuoo")

[node name="DeathLabel" type="Label" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.45, 0, 0, 0.470588)
theme_override_colors/font_outline_color = Color(0.71, 0, 0, 0.678431)
theme_override_constants/outline_size = 16
theme_override_constants/shadow_outline_size = 32
theme_override_fonts/font = ExtResource("5_k4w17")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxTexture_cf6ij")
text = "Вы умерли!"
horizontal_alignment = 1
vertical_alignment = 1
